[package]
name = "surface-json"
description = "JSON parsing and manipulation"
version = "0.0.1"
edition = "2024"

readme = "README.md"
license = "MIT"
repository = "https://github.com/almic/Surface-Engine"
documentation = "https://docs.rs/surface-json"
exclude = ["EXTRA.md", "src/parser/test.rs", "tests/"]
